// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs component should render correctly no current 1`] = `
<Breadcrumb
  aria-label="Breadcrumb"
  className="ins-c-breadcrumbs"
>
  <BreadcrumbItem
    className=""
    component="a"
    data-key={0}
    isActive={false}
    key="0"
    target={null}
    to={null}
  >
    <a
      aria-label="first"
      onClick={[Function]}
    >
      First
    </a>
  </BreadcrumbItem>
  <BreadcrumbItem
    className=""
    component="a"
    data-key={1}
    isActive={false}
    key="1"
    target={null}
    to={null}
  >
    <a
      aria-label="second"
      onClick={[Function]}
    >
      <span>
        Second
      </span>
    </a>
  </BreadcrumbItem>
</Breadcrumb>
`;

exports[`Breadcrumbs component should render correctly no items 1`] = `
<Breadcrumb
  aria-label="Breadcrumb"
  className="ins-c-breadcrumbs"
>
  <BreadcrumbItem
    className=""
    component="a"
    isActive={true}
    target={null}
    to={null}
  >
     
    Something
     
  </BreadcrumbItem>
</Breadcrumb>
`;

exports[`Breadcrumbs component should render correctly with items and current item 1`] = `
<Breadcrumb
  aria-label="Breadcrumb"
  className="ins-c-breadcrumbs"
>
  <BreadcrumbItem
    className=""
    component="a"
    data-key={0}
    isActive={false}
    key="0"
    target={null}
    to={null}
  >
    <a
      aria-label="first"
      onClick={[Function]}
    >
      First
    </a>
  </BreadcrumbItem>
  <BreadcrumbItem
    className=""
    component="a"
    data-key={1}
    isActive={false}
    key="1"
    target={null}
    to={null}
  >
    <a
      aria-label="second"
      onClick={[Function]}
    >
      <span>
        Second
      </span>
    </a>
  </BreadcrumbItem>
  <BreadcrumbItem
    className=""
    component="a"
    isActive={true}
    target={null}
    to={null}
  >
     
    Something
     
  </BreadcrumbItem>
</Breadcrumb>
`;
